@@ -1,5 +1,10 @@
 2013-02-13
 
+	* src/notificationwindow.c: adjusted paddings again.
+	  plugin/test/test.c: modified notification test.
+
+2013-02-13
+
 	* src/notificationwindow.c: adjusted paddings.
 
 2013-02-13
